--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Panda Express Chinese Kitchen</title>
 
@@ -34,7 +35,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul id="nav-list" class="navbar-nav navbar-right ">
                         <li class="nav-item">
-                            <a class="nav-link" href="menu.html"><span><i class="fas fa-pepper-hot"></i></span><br class="d-none d-sm-block">Menu</a>
+                            <a class="nav-link" href="menu.html"><span><i class="fa fa-cutlery" aria-hidden="true"></i></span><br class="d-none d-sm-block">Menu</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="menu.html"><span><i class="fas fa-info-circle    "></i></span><br class="d-none d-sm-block">About Us</a>
