--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="menu.html"><span><i class="fas fa-phone    "></i></span><br class="d-none d-sm-block">Contact</a>
                         </li>   
-                        <li id="phone" class="d-none d-sm-block">
+                        <li id="phone" class="d-none d-md-block d-lg-block">
                             <a href="tel:410-602-5008">
                                 <span>410-602-5008</span>
                             </a>
