--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <nav id="header-nav" class="navbar navbar-expand-lg navbar-light">
         <div class="container">
           <div class="navbar-header">
-            <a href="index.html" class="float-left d-none d-md-block">
+            <a href="index.html" class="float-left d-none d-sm-block">
               <div id="logo-image"></div>
             </a>
 
@@ -85,9 +85,10 @@
         </div>
       </nav>
     </header>
+    <br>
     <div id="main-content" class="container">
       <div class="jumbotron">
-        <!-- <img src="https://www.we-heart.com/upload-images/fookyew2.jpg" alt="Restaurant Interior"> -->
+        <img src="./img/" alt="">
 
       </div>
     </div>
