--- a/index.html
+++ b/index.html
@@ -85,11 +85,32 @@
         </div>
       </nav>
     </header>
-    <br>
+    <br />
     <div id="main-content" class="container">
-      <div class="jumbotron">
-        <img src="./img/" alt="">
-
+      <div class="jumbotron"></div>
+      <div class="row" id="home-tiles">
+        <div class="col col-md-4 col-sm-6 col-12">
+          <a href="menu.html">
+            <div id="menu-tile">
+              <span>menu</span>
+            </div>
+          </a>
+        </div>
+        <div class="col col-md-4 col-sm-6 col-12">
+          <a href="specials.html">
+            <div id="special-tile">
+              <span>specials</span>
+            </div>
+          </a>
+        </div>
+        <div class="col col-md-4 col-sm-12 col-12" >
+          <a href="menu.html" target="_blank">
+            <div id="map-tile">
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d32457.960337652286!2d-118.08952250745484!3d34.148482066607116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2db7fb5068f09%3A0x8ebf632866740e91!2sPanda%20Express!5e0!3m2!1sen!2sin!4v1597328094889!5m2!1sen!2sin" width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+              <span>map</span>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
 
