--- a/index.html
+++ b/index.html
@@ -103,16 +103,44 @@
             </div>
           </a>
         </div>
-        <div class="col col-md-4 col-sm-12 col-12" >
+        <div class="col col-md-4 col-sm-12 col-12">
           <a href="menu.html" target="_blank">
             <div id="map-tile">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d32457.960337652286!2d-118.08952250745484!3d34.148482066607116!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2db7fb5068f09%3A0x8ebf632866740e91!2sPanda%20Express!5e0!3m2!1sen!2sin!4v1597328094889!5m2!1sen!2sin" width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14196.324219920629!2d77.23365969863048!3d28.537940270404984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390ce22b3e459e85%3A0xb39fccbdf2833b43!2sPanda%20Wokk!5e0!3m2!1sen!2sin!4v1597332066523!5m2!1sen!2sin" width="100%" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
               <span>map</span>
             </div>
           </a>
         </div>
       </div>
     </div>
+
+    <footer class="panel-footer">
+      <div class="container">
+        <div class="row">
+          <section id="hours" class="col-sm-4">
+            <span>Hours</span><br>
+            Sun-Thurs: 11:15am - 10:00pm <br>
+            Fri: 11:15am - 2:30pm <br>
+            Saturday Closed <br>
+            <hr class="d-block d-sm-none"/>
+          </section>
+          <section id="address" class="col-sm-4">
+            <span>Address</span><br>
+            Shop No: 23 & 24, Commercial Complex, <br> Greater Kailash-2, Masjid Moth, <br> New Delhi, Delhi 110048
+            <hr class="d-block d-sm-none"/>
+
+          </section>
+          <section id="testimonials" class="col-sm-4">
+            
+            <p>Excellent eating experience.. Meal was served hot and excellent taste. Server was very friendly and helpful.</p>
+            <p>Delicious, spicy chinese food, served efficiently.</p>
+          </section>
+        </div>
+        <div class="text-center">&copy; Copyright Varsha Singh 2020</div>
+    </div>
+      </div>
+
+    </footer>
 
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
