--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul id="nav-list" class="navbar-nav mr-auto">
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="menu.html"
                   ><span><i class="fa fa-cutlery" aria-hidden="true"></i></span
                   ><br class="d-none d-sm-block" />Menu</a
