--- a/menu.html
+++ b/menu.html
@@ -88,7 +88,7 @@
     <br/>
     <div id="main-content" class="container">
         <h2 id="menu-title" class="text-center">Menu Categories</h2>
-        <div class="text-center">You can substitute brown rice with white rice or fried rice at additional cost of 25 Rs.</div>
+        <div class="text-center" id="tip">You can substitute brown rice with white rice or fried rice at additional cost of 25 Rs.</div>
         <section class="row">
             <div class="col-md-3 col-sm-4 col-xxs-12">
                 <a href="single-category.html">
