--- a/menu.html
+++ b/menu.html
@@ -51,6 +51,7 @@
             aria-controls="navbarNav"
             aria-expanded="false"
             aria-label="Toggle navigation"
+            id="navbarToggle"
           >
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -232,5 +233,6 @@
       integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
       crossorigin="anonymous"
     ></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
